--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,72 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.header{
+  display:flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  box-shadow: 0 5px 5px rgba(0,0,0,0.5)
+}
+.movie-container{
+  display:flex;
+  justify-content: center;
+  margin-top:24px;
+  flex-direction: column;
 }
 
-.App-link {
-  color: #61dafb;
+
+
+.movie-card{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+    width:80%;
+    max-width:350px;
+    max-height:350px;
+    border:2px solid black;
+    border-radius:4px;
+    padding:16px;
+    margin:16px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.movie-title{
+  font-weight:bold;
+  font-size:16px;
 }
+.movie-poster-container{
+  width:100px;
+  height:150px;
+  margin:8px;
+}
+
+.movie-poster-container > img{
+    width:100%;
+    height:100%;
+}
+
+.movie-subtitle{
+  font-size:12px;
+  
+}
+
+.movie-description{
+  font-size:14px;
+  font-weight:600;
+  max-width:85%;
+}
+.movie-rating{
+  font-size: 12px;
+}
+
+.rating{
+  font-size: 12px;
+  font-weight:bold;
+  margin-right:4px;
+}
+
+@media only screen and (min-width:768px){
+  .movie-container{
+   
+    flex-direction: row;
+  }
+  
+}
+
